; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-windows.c_os_get_abs_path.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-windows.c_os_get_abs_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @os_get_abs_path(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca [512 x i32], align 16
  %9 = alloca [512 x i32], align 16
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %34

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds [512 x i32], [512 x i32]* %8, i64 0, i64 0
  %18 = call i64 @os_utf8_to_wcs(i8* %16, i32 0, i32* %17, i32 512)
  store i64 %18, i64* %11, align 8
  %19 = load i64, i64* %11, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %15
  store i64 0, i64* %4, align 8
  br label %34

22:                                               ; preds = %15
  %23 = getelementptr inbounds [512 x i32], [512 x i32]* %9, i64 0, i64 0
  %24 = getelementptr inbounds [512 x i32], [512 x i32]* %8, i64 0, i64 0
  %25 = call i32* @_wfullpath(i32* %23, i32* %24, i32 512)
  %26 = icmp ne i32* %25, null
  br i1 %26, label %27, label %32

27:                                               ; preds = %22
  %28 = getelementptr inbounds [512 x i32], [512 x i32]* %9, i64 0, i64 0
  %29 = load i8*, i8** %6, align 8
  %30 = load i64, i64* %7, align 8
  %31 = call i64 @os_wcs_to_utf8(i32* %28, i32 0, i8* %29, i64 %30)
  store i64 %31, i64* %10, align 8
  br label %32

32:                                               ; preds = %27, %22
  %33 = load i64, i64* %10, align 8
  store i64 %33, i64* %4, align 8
  br label %34

34:                                               ; preds = %32, %21, %14
  %35 = load i64, i64* %4, align 8
  ret i64 %35
}

declare dso_local i64 @os_utf8_to_wcs(i8*, i32, i32*, i32) #1

declare dso_local i32* @_wfullpath(i32*, i32*, i32) #1

declare dso_local i64 @os_wcs_to_utf8(i32*, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
